--- a/styleMain.css
+++ b/styleMain.css
@@ -5,6 +5,14 @@
     font-family: 'Lato';
 }
 
+body{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+}
+
 a{
     text-decoration: none;
     color: white;
@@ -71,39 +79,71 @@ header{
     flex-direction: row;
 }
 
-
-
 .centro{
-    position: fixed;
+    flex: 1;
     margin-top: 80px;
-    background-color: aqua;
-    height: 90vh;
-    width: 100%;
+    background-color: black;
     display: flex;
+    justify-content: space-evenly;
     flex-direction: row;
-    justify-content: space-between;
+    width: 100%;
 }
 
 .menubar{
-    display: flex;
-    align-items: left;
-    flex-direction: column;
     background-color: black;
-    min-width: 400px;
-    max-width: 20%;
-}
-
-.menubar, .izquierda{
-    height: 100%;
-}
-
-.menubar, .izquierda nav{
-    display: flex;
-    flex-direction: column;
     padding: 20px;
 }
 
-.menubar, .central{
-    max-width: 600px;
+.izquierda{
+    position: fixed;
+    left: 0;
     height: 100%;
+    width: 15%;
+}
+
+.izquierda nav{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.central{
+    width: 50%;
+    margin-left: 5%;
+    margin-right: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100vh;
+}
+
+.derecha{
+    position: fixed;
+    right: 0;
+    height: 100%;
+    width: 15%;
+}
+
+.feed{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+}
+
+.imagen{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+}
+
+.feedback{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 100px;
 }
